# SlideScribe

./: .gitignore  LICENSE  PRD.md  README.md  RULES.md  pyproject.toml
cli/: .gitignore  README.md  pyproject.toml
cli/showcase/: BadSlides_LatexInImages.md
cli/src/slidescribe/: cli.py
showcase/: BadSlides_LackingExplanations.md
src/slidescribe/: cli.py
