[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slidescribe"
version = "0.2.0"
description = "A lightweight, zero-UI CLI tool to convert lecture PDFs into LaTeX-rich Markdown notes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pdf2image>=1.16.3",
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
slidescribe = "slidescribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
